tests/derive/union.stderr
error: derive(Bundle) does not support enums or unions
 --> $DIR/union.rs:4:7
  |
4 | union Foo {
  |       ^^^
